--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  padding: 0 20px;
+  padding: 0;
   font-family: sans-serif;
-  background: tan;
+  background: rgb(255, 247, 237);
 }
