--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
-* {
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
+}
+*:focus {
+  outline: none;
 }
 
 body {
@@ -7,4 +14,17 @@ body {
   padding: 0;
   font-family: sans-serif;
   background: rgb(255, 247, 237);
+}
+
+a {
+  /* display: inline-block; */
+  cursor: pointer;
+  text-decoration: none;
+  -webkit-transition: 250ms ease;
+  -moz-transition: 250ms ease;
+  -ms-transition: 250ms ease;
+  transition: 250ms ease;
+  /* -o-transition: ease-in-out .15s;
+    -webkit-transition: ease-in-out .15s;
+  transition: ease-in-out .15s; */
 }
