--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-  background: rgb(255, 247, 237);
+  background: #7c0a02;
 }
 
 a {
