--- a/src/index.css
+++ b/src/index.css
@@ -1,34 +1,34 @@
 @font-face {
   font-family: 'robotoblack';
-  src: url('assets/fonts/Roboto-Black-webfont.woff') format('woff');
+  src: url('./assets/fonts/Roboto-Black-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'robotobold';
-  src: url('assets/fonts/Roboto-Bold-webfont.woff') format('woff');
+  src: url('./assets/fonts/Roboto-Bold-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'robotoregular';
-  src: url('assets/fonts/Roboto-Regular-webfont.woff') format('woff');
+  src: url('./assets/fonts/Roboto-Regular-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'robotomedium';
-  src: url('assets/fonts/Roboto-Medium-webfont.woff') format('woff');
+  src: url('./assets/fonts/Roboto-Medium-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'robotothinitalic';
-  src: url('assets/fonts/Roboto-ThinItalic-webfont.woff') format('woff');
+  src: url('./assets/fonts/Roboto-ThinItalic-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
