--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,6 @@ a {
 body {
   margin: 0;
   padding: 0;
-  background-color: skyblue;
+  background-color: rgb(206, 0, 0);
   font-family: 'robotoregular';
 }
